# libdots

./: .gitignore  Makefile
dots/: control.c  env.c  msg.c  output.c  request.c
dots/internal/: control_msg.c
example/: Makefile  example.c  example_wrapper.sh  server_conf.yml
include/: dots.h
include/dots/: control.h  defs.h  env.h  err.h  msg.h  output.h  request.h  startup.h
include/dots/internal/: control_msg.h  defs.h  env.h  util.h
rust/: Cargo.toml  build.rs
rust/src/: env.rs  lib.rs  msg.rs  output.rs  request.rs
