[package]
name = "libdots"
version = "0.3.0"
edition = "2021"
description = "Server application API for the Berkeley DoTS platform"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.2" }

[build-dependencies]
bindgen = "0.65.1"
